--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,15 @@
-﻿spring:
-    profiles:
-        active:
-        - dev   #当前使用的环境
+spring:
+  profiles:
+    active:
+    - dev   #当前使用的环境
 ---
 
 spring:
-    profiles: dev #开发环境
+  profiles: dev #开发环境
     application:
-        name: config-server-dev
+      name: config-server-dev
 ---
 spring:
-    profiles: test #测试环境
+  profiles: test #测试环境
     application:
-        name: config-server-test
+      name: config-server-test
