--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ spring:
     active:
     - dev #当前使用的环境
 ---
-content: dev content 刷
+content: dev content 刷ssss
 spring:
   profiles: dev #开发环境
   application:
